# edu_lib_sensorring

./: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: deploy-pages.yml
apps/examples/: CMakeLists.txt
apps/examples/cpp/: CMakeLists.txt
apps/examples/cpp/depth_map/: CMakeLists.txt  MeasurementProxy.cpp  MeasurementProxy.hpp  main.cpp
apps/examples/cpp/depth_map/src/: MeasurementProxy.cpp  MeasurementProxy.hpp  main.cpp
apps/examples/cpp/minimal/: CMakeLists.txt  MeasurementProxy.cpp  MeasurementProxy.hpp  main.cpp
apps/examples/cpp/minimal/src/: MeasurementProxy.cpp  MeasurementProxy.hpp  main.cpp
apps/examples/python/depth_map/: depth_map.py
apps/examples/python/depth_view/: depth_view.py
apps/examples/python/minimal/: minimal.py
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  sensorring.i
cmake/: BuildOptions.cmake  BuildSettings.cmake  CMakeLists.txt  CollectDependencies.cmake  Config.cmake.in  ConfigurePaths.cmake  ConfigurePlatform.cmake  FetchContentCompat.cmake  PackageGeneration.cmake  ShowSummary.cmake  install_release.bash  make_release.bash  remove_installation.bash
doc/: CMakeLists.txt  class_diagram simple.uxf  class_diagram.uxf  dev_doc.md  doxygen.config.in  parameters.md  state_machine.uxf  sw_interface.md  topology.md
doc/diagrams/: class_diagram simple.uxf  class_diagram.uxf  state_machine.uxf
doc/doxygen/: custom.css  header.html
doc/pages/: 01_hardware.md  02_installation.md  03_software.md  04_dev_doc.md  dev_doc.md  parameters.md
include/sensorring/: CustomTypes.hpp  Math.hpp  MeasurementClient.hpp  MeasurementManager.hpp  MeasurementObserver.hpp  MeasurementObservers.hpp  Parameter.hpp  Parameters.hpp  SensorBoard.hpp  SensorBus.hpp  SensorRing.hpp
include/sensorring/boardmanager/: SensorBoardManager.hpp
include/sensorring/can/: SocketCANFD.hpp  SocketCANFDObserver.hpp  canprotocol.hpp
include/sensorring/interface/: ComEndpoints.hpp  ComInterface.hpp  ComManager.hpp  ComObserver.hpp  Endpoints.hpp
include/sensorring/interface/can/: SocketCANFD.hpp  SocketCANFDManager.hpp  SocketCANFDObserver.hpp  USBtingo.hpp  canprotocol.hpp
include/sensorring/logger/: Logger.hpp  LoggerClient.hpp
include/sensorring/math/: Math.hpp  Matrix3.hpp  MiniMath.hpp  Vector3.hpp
include/sensorring/platform/: SensorringExport.hpp
include/sensorring/sensors/: BaseSensor.hpp  LedLight.hpp  ThermalSensor.hpp  TofSensor.hpp
include/sensorring/types/: CustomTypes.hpp  Image.hpp  InterfaceType.hpp  LightMode.hpp  Math.hpp  MeasurementObserver.hpp  ObserverInterface.hpp  Parameters.hpp  PointCloud.hpp  ThermalMeasurement.hpp  ToFMeasurement.hpp  TofMeasurement.hpp
include/sensorring/types/install_types/: CustomTypes.hpp
include/sensorring/utils/: CustomTypes.hpp  FileManager.hpp  Iron.hpp  Logger.hpp  Math.hpp  ObserverInterface.hpp  Parameters.hpp  SingletonTemplate.hpp  heimann_htpa32.hpp
src/: CMakeLists.txt  MeasurementClient.cpp  MeasurementManager.cpp  MeasurementManagerImpl.cpp  MeasurementManagerImpl.hpp  SensorBoard.cpp  SensorBoard.hpp  SensorBus.cpp  SensorBus.hpp  SensorRing.cpp  SensorRing.hpp
src/boardmanager/: SensorBoardManager.hpp
src/can/: SocketCANFD.cpp  SocketCANFDObserver.cpp
src/interface/: ComEndpoints.hpp  ComInterface.cpp  ComInterface.hpp  ComManager.cpp  ComManager.hpp  ComObserver.cpp  ComObserver.hpp
src/interface/can/: SocketCANFD.cpp  SocketCANFD.hpp  SocketCANFDManager.cpp  SocketCANFDObserver.cpp  USBtingo.cpp  USBtingo.hpp  canprotocol.cpp  canprotocol.hpp
src/logger/: Logger.cpp  LoggerClient.cpp
src/math/: Math.cpp  Matrix3.cpp  Vector3.cpp
src/platform/: Platform.hpp
src/profiling/: Profiling.hpp
src/sensors/: BaseSensor.cpp  BaseSensor.hpp  LedLight.cpp  LedLight.hpp  ThermalSensor.cpp  ThermalSensor.hpp  TofSensor.cpp  TofSensor.hpp
src/sensors/hardware/: heimann_htpa32.hpp  st_vl53l8cx.hpp
src/types/: CustomTypes.cpp  EnumerationInformation.hpp  Image.cpp  Math.cpp  PointCloud.cpp
src/utils/: CustomTypes.cpp  EnumerationInformation.cpp  EnumerationInformation.hpp  FileManager.cpp  FileManager.hpp  Iron.hpp  Logger.cpp  Logger.hpp  Math.cpp  SingletonTemplate.hpp  Version.hpp  heimann_htpa32.hpp
